Bug 434113 - Subtitle text cut off
Summary: Subtitle text cut off
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.21.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-03-07 15:20 UTC by Alex
Modified: 2021-12-19 19:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Screenshot of the bug (9.25 KB, image/png)
2021-03-07 15:20 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2021-03-07 15:20:57 UTC
Created attachment 136458 [details]
Screenshot of the bug

Title and attachment says it all.

Frameworks 5.79.0
Qt 5.12.2
Fedora 34
Wayland session
Comment 1 Nate Graham 2021-03-08 16:33:28 UTC
Can you provide some steps to reproduce? It works fine for me when I go to that page in System Settings. How are you getting there?
Comment 2 Alex 2021-03-09 13:48:40 UTC
I just open the systemsettings app, go to Regional Settings, then go to Date & Time. 

Maybe there's a configuration difference. Are there any config files that would affect this?

I observed this on plasma release 5.21.2. I tried systemsettings compiled with kdesrc-build, but upon trying to kdesrc-run it, I got a "bash: /prefix.sh: No such file or directory" error.
Comment 3 Nate Graham 2021-03-09 15:49:30 UTC
Yeah, when I do that, it works fine.

I'm using 11pt Noto Sans as my font, with 200% global scale. Those are about the only relevant differences between the default settings that I can think of. Yourself?
Comment 4 Nate Graham 2021-03-09 19:48:22 UTC
I can confirm the issue on Wayland: the header does not become tall enough to display all of the subtitle text. Depending on your font settings, the text may be cut off, or totally invisible, with the only evidence for it being that it's selectable and the top of the selection rect can remain visible.
Comment 5 Alex 2021-05-22 08:39:46 UTC
I just noticed this also happens on the Kwallet KCM. Changing the component to general
Comment 6 Nate Graham 2021-12-15 22:46:48 UTC
This became more visible recently when we reduced the default size of Level 1 headings.

Not Wayland-specific.
Comment 7 Bug Janitor Service 2021-12-15 23:07:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/106
Comment 8 Nate Graham 2021-12-19 19:19:50 UTC
Git commit 1890900df745249dcdd3191cd68217c655de6f3f by Nate Graham.
Committed on 19/12/2021 at 19:17.
Pushed by ngraham into branch 'master'.

Don't show unnecessary root authentication message

This message is pointless because the user will find out that they need
to authenticate when they click the "Apply" button anyway. Showing the
user this information ahead of time just contributes to visual clutter
when it is even shown.

However the message hasn't even been shown for at least 9 months due to
an intentional change in header height calculation to make the KCM
header height always match the height of the category/subcategory
sidebar header height. This had the side effect of entirely or mostly
cutting off the authentication message. With the current design, there
is no way to fix this without regressing the header alignment fix, and
the message is pretty much unnecessary anyway, so the simplest solution
is to not show it at all.
FIXED-IN: 5.24

M  +0    -6    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/1890900df745249dcdd3191cd68217c655de6f3f